--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,87 @@ header {
   color: #404bbf;
 }
 
+/* ---Hamburger menu--- 
+
+.icon-hamburger {
+  fill: #2f2f37;
+  cursor: pointer;
+}
+.menu-hamburger {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 100;
+  background-color: #fff;
+  padding-top: 72px;
+  padding-left: 16px;
+  padding-bottom: 40px;
+  padding-right: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateX(100%);
+}
+.social-menu.ham {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 48px;
+}
+.list-header.ham {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  gap: 40px;
+}
+.link.ham.active-link {
+  color: #404bbf;
+}
+.active-link::after {
+  content: "";
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.address-list.ham {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  padding: 0;
+}
+.link.ham {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  padding: 0;
+}
+.contact-link.ham {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+.menu-hamburger.is-open-hamburger {
+  transform: translateX(0);
+}
+.menu-icon-hamburger {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  line-height: 0;
+}
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+/* ---END od Hamburger menu--- */
+
 .section-one {
   padding: 120px 0;
 }
