--- a/css/styles.css
+++ b/css/styles.css
@@ -61,16 +61,16 @@ ol {
   padding: 0 16px;
   max-width: 320px;
 }
-
+/* hide it or not? */
 .section-one-icons-container {
   display: none;
-  /*
+
   align-items: center;
   justify-content: center;
   height: 112px;
   background-color: #f4f4fd;
   border-radius: 4px;
-  margin-bottom: 8px; */
+  margin-bottom: 8px;
 }
 
 .section-one-icons {
