--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,7 @@ header {
   display: flex;
   flex-direction: column;
   gap: 24px;
-  padding: 0;
+  padding: 0; /* or remove? */
 }
 .link.ham {
   font-size: 36px;
@@ -317,7 +317,6 @@ header {
   font-style: normal;
   display: flex;
   gap: 40px;
-  padding: 24px 0;
 }
 .address-list {
   display: none;
@@ -1068,7 +1067,6 @@ header {
   }
   .address-list {
     gap: 40px;
-    padding: 24px 0;
     margin-right: 0;
     justify-content: flex-end;
   }
