--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,7 @@ header {
   display: flex;
   flex-direction: column;
   gap: 24px;
-  padding: 0; /* or remove? */
+  /* padding: 0; */
 }
 .link.ham {
   font-size: 36px;
