--- a/css/styles.css
+++ b/css/styles.css
@@ -1068,6 +1068,7 @@ header {
     gap: 40px;
     margin-right: 0;
     justify-content: flex-end;
+    align-items: center;
   }
   .contact-link {
     font-size: 16px;
